<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="qr_code">Scan</string>
  <string name="master_uri_hint">http://localhost:11311/</string>
  <string name="new_master">New Master</string>
  <string name="master_prompt">Please set hostname / host IP and port of the ROS master.</string>
  <string name="master_host_hint">localhost</string>
  <string name="master_protocol">http://</string>
  <string name="master_port_hint">11311</string>
  <string name="master_connect">Connect</string>
  
  <string name="pref_title_node_name">ROS Node Name</string>
  <string name="pref_summary_node_name">Graph name of the ROS node on this device</string>
  <string name="pref_dialog_title_node_name">Enter a valid graph name for the ROS node to be started on this device</string>
  
  <string name="pref_title_ros_master_uri">ROS Master URI</string>
  <string name="pref_summary_ros_master_uri">URI of the ROS master node</string>
  <string name="pref_dialog_title_ros_master_uri">Enter a valid URI pointing to the ROS master</string>
  
  <string name="pref_title_namespace">Namespace</string>
  <string name="pref_summary_namespace">Namespace of the ROS node</string>
  <string name="pref_dialog_title_namespace">Enter the namespace of the ROS node</string>
</resources>
