<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:text="@string/master_prompt"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp" >

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/master_protocol"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/master_chooser_host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/master_host_hint"
            android:singleLine="true" />

        <TextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text=":"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/master_chooser_port"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/master_port_hint"
            android:inputType="number" >

            <requestFocus />
        </EditText>

    </LinearLayout>
</LinearLayout>